<resources>
    <string name="app_name">GodOfRowing</string>
    <string name="title_activity_analysis_navigation">Trainig Results</string>

    <string name="ref_database_users">users</string>
    <string name="ref_database_sortby_currentTime">curTimeMillis</string>
    <string name="ref_database_activities">allActivities2</string>
    <string name="ref_database_training_location_list">allTrainLocations</string>
    <string name="format_DataBaseTime">yyyy:MM:dd HH:mm</string>

    <string name="def_parameter_name">Accel</string>
    <string name="def_parameter_value">ParamValue</string>
    <string name="def_parameter_name2">Map</string>
    <string name="def_parameter_name3">Accel</string>
    <string name="def_parameter_name4">Linear\nAccel</string>
    <string name="def_parameter_name5">Balance</string>
    <string name="def_parameter_name6"></string>
    <string name="title_activity_map">Map</string>
    <string name="action_settings">Settings</string>
    <string name="notFinished">commingSoon</string>

    <string name="err_toast_gps_connect_failed">GPS Connection Failed</string>
    <string name="toast_register_succses">You are successfully Registered !!</string>
    <string name="err_toast_register_pass_min">Password too short, enter min 6 characters!</string>
    <string name="err_toast_login_auth">Authentication error, Please enter a valid email and password or sign up</string>
    <string name="err_toast_email">Enter a valid email.</string>
    <string name="err_toast_required">Required !!</string>
    <string name="err_toast_password">Enter a valid password with min 6 characters.</string>
    <string name="err_permission_location_denied">Permission Location denied</string>
    <string name="err_date_before_end">Please choose date, before End Date!</string>
    <string name="err_date_after_start">Please choose date, after Start Date!</string>

    <string name="hint_email">Email*</string>
    <string name="hint_password">Password*</string>
    <string name="hint_username">Username</string>

    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_login">Already registered. Login !!</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="btn_sign_up">Sign Up !!</string>
    <string name="btn_link_to_signin">Don\'t have an account, SignIn !!</string>
    <string name="btn_remember_me">Remember me:</string>

    <string name="str_link_to_forgot_pass">Forgot Password</string>
    <string name="login_anonymous">Anonymous:</string>


    <string name="enter_total_meters">Enter Total Meters</string>
    <string name="hint_age">Age</string>
    <string name="logo">logo</string>

    <string name="param_meters_text">meters</string>
    <string name="param_spm_def_text">0 \nSPM</string>
    <string name="param_def_speed_per500">0:00\nper 500m</string>
    <string name="param_def_ave_speed_per500">0 min\nper 500m</string>
    <string name="param_def_speed_msec">0:0\nave Speed</string>
    <string name="param_def_ave_spm">0\nave SPM</string>

    <string name="zero_timer">0:00:0</string>
    <string name="zero">0</string>
    <string name="nm_per_sec">0.0 m \nper sec</string>
    <string name="NoStrokeTextView">0 SPM</string>

    <string name="start_activity">Start Activity</string>
    <string name="stop_activity">Stop</string>
    <string name="action_signout">SignOut</string>
    <string name="longtxtTest">Hello, everyone! </string>
    <string name="controller_stop">Stop</string>

    <string name="text_SPM">\nSPM</string>
    <string name="text_aveSPM"> ave/SPM</string>
    <string name="text_per500m">per 500m</string>
    <string name="text_perAve500m">ave per 500m</string>
    <string name="text_mPerS_long">m \n per sec</string>
    <string name="text_mPerS_short"> m/s</string>
    <string name="text_Resume">Resume</string>
    <string name="text_Pause">Pause</string>
    <string name="text_Zero_ChronomView">0:00  ElapsedTime</string>
    <string name="text_Welcome">Welcome </string>

    <string name="text_result_perMin">per minute</string>
    <string name="text_result_totMeters">Total Meters -</string>
    <string name="text_result_strokeRate_max">Stroke Rate Max  -</string>
    <string name="text_result_speed_ave">Speed average    -</string>
    <string name="text_result_strokeRate_min">Stroke Rate Min  -</string>
    <string name="text_result_StrokeRate_ave">Stroke Rate Ave: -</string>
    <string name="text_result_speed">Speed -</string>
    <string name="text_result_distance">Distance(m):</string>
    <string name="text_result_duration">Duration:</string>
    <string name="text_result_strokePerMin">StrokePerMin</string>
    <string name="text_result_ave_sec500m">Ave sec/500m</string>
    <string name="text_result_speedPer500m_max">Max Speed/500m</string>
    <string name="text_result_speed_zero"> 0:00</string>
    <string name="text_result_duration_zero">0:00:00</string>
    <string name="text_meters_zero">0000</string>

    <string name="acc_anonym_email">anonymous@gmail.com</string>
    <string name="acc_anonym_pass">anonymous</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="dialog_gps_title">GPS request</string>
    <string name="dialog_gps_message_enable">GPS is not enabled. Do you want to go to settings menu?</string>
    <string name="dialog_gps_button_negative_cancel">Cancel</string>
    <string name="dialog_gps_button_positive_settings">Settings</string>
    <string name="title_activity_base_navig">BaseNavigActivity</string>

    <string name="time_end_day">-23:59:59"</string>
    <string name="time_start_day">-00:00:00</string>
    <string name="time_pattern">yyyy:MM:dd-HH:mm:ss</string>
    <string name="dialog_search_start_date">Start Date:</string>
    <string name="dialog_search_end_date">End Date:   </string>
    <string name="dialog_search_start_time">Start Time:</string>
    <string name="dialog_search_end_time"  >End Time  :</string>


</resources>
