<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="10dp"
    tools:context=".AuthenticationActivities.LogInActivity">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="140dp"
        app:srcCompat="@drawable/icon_logo"
        android:layout_alignParentStart="true"
        android:id="@+id/logIn_logo_image"
        android:contentDescription="@string/logo" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_input_layout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logIn_logo_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp">
        <EditText
            android:id="@+id/login_input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="Email" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_input_layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_input_layout_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/login_input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/hint_password" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_input_layout_switchers"
        android:layout_width="match_parent"
        android:layout_below="@+id/login_input_layout_password"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp">
        <Switch
            android:text="@string/btn_remember_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login_switch_remember"
            android:paddingStart="10dp"
            android:layout_weight="1"
            android:checked="true" />

        <Switch
            android:text="@string/login_anonymous"
            android:paddingStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onAnonymouSwitchClick"
            android:id="@+id/login_switch_anonymous" />
    </android.support.design.widget.TextInputLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_below="@+id/login_input_layout_switchers"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <Button android:id="@+id/btn_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_login"
        android:background="@color/colorPrimaryDark"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/white"/>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

        <Button android:id="@+id/btn_link_signin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_link_to_signin"
        android:background="@android:color/transparent"
        android:layout_marginTop="5dp"
        android:textColor="@color/colorPrimaryDark"/>
    <Button android:id="@+id/btn_link_forgot_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="12dp"
        android:text="@string/str_link_to_forgot_pass"
        android:background="@android:color/transparent"
        android:layout_marginTop="5dp"
        android:textColor="@color/colorPrimaryDark"/>
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_progressBar"/>
    </LinearLayout>
</RelativeLayout>